--- a/checkpoint-REST-API/configs/.env
+++ b/checkpoint-REST-API/configs/.env
@@ -1,5 +1,5 @@
-S3_BUCKET="YOURS3BUCKET"
-SECRET_KEY="YOURSECRETKEYGOESHERE"
+S3_BUCKET=""
+SECRET_KEY=""
 
 require('dotenv').config()
 console.log(process.env)
